--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
   height: 100%;
   display: flex;
   padding: 1.5rem;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
 }
 
